# pixel-board-api

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  railway.toml
docs/: PRD.md
migrations/001_create_users/: up.sql
migrations/002_create_blocks/: up.sql
migrations/003_create_reservations/: up.sql
src/: main.rs
src/config/: api_doc.rs  cors.rs
src/infra/: migrations.rs  mod.rs  postgres.rs  redis.rs  storage.rs
src/middlewares/: auth_middleware.rs
src/modules/: mod.rs
src/modules/block/: block_controllers.rs  block_dtos.rs  block_repositories.rs  block_services.rs  mod.rs
src/modules/board/: board_controllers.rs  board_dtos.rs  mod.rs
src/modules/upload/: mod.rs  upload_controllers.rs  upload_dtos.rs  upload_services.rs
src/modules/user/: mod.rs  user_controllers.rs  user_dtos.rs  user_repositories.rs  user_services.rs
src/shared/exceptions/: error.rs
src/shared/structs/: query_params.rs
src/shared/treaties/: jwt.rs
src/utils/: validate_body.rs
