[package]
name = "pixel_board_api"
version = "0.1.0"
edition = "2024"
description = "PixelBoard.net — API para um outdoor virtual limitado onde marcas, criadores e pequenos negócios compram blocos visuais em um grande mural online."
license = "MIT"
readme = "README.md"
authors = ["Victor Navarro <victor.jose.lopes.navarro@gmail.com>"]

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-chrono-0_4",
] }

# Cache
deadpool-redis = { version = "0.18.0", features = ["serde"] }

# Auth
bcrypt = "0.19.0"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }
regex = "1"

# Object Storage (MinIO / S3-compatible)
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"

# Async utilities
futures-util = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
mime_guess = "2"

# Logging
env_logger = "0.11"
log = "0.4"

# Documentation
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["actix-web"] }

[dev-dependencies]
actix-rt = "2"
